modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Website Enrollment</title>
 </head>
 <body>
-    <h1>This website is enrolled with Jenkins or Ansible from Git Test123</h1>
+    <h1>This website is enrolled with Jenkins or Ansible from Git Aangepast</h1>
 </body>
 </html>
